[gd_scene load_steps=9 format=3 uid="uid://6pfaforic4qw"]

[ext_resource type="Script" path="res://scripts/upgrades/evil/pizza_drone.gd" id="1_kdyqq"]
[ext_resource type="Material" uid="uid://cimhmqlj16qqv" path="res://assets/shaders/smooth_pixel.tres" id="2_cx5yg"]
[ext_resource type="Texture2D" uid="uid://dl61njjb3lv61" path="res://assets/upgrades/pizza.png" id="3_a5x3b"]
[ext_resource type="PackedScene" uid="uid://3miicp8y7p5b" path="res://scenes/shared/multi_hitbox.tscn" id="4_8tmqp"]

[sub_resource type="CircleShape2D" id="CircleShape2D_22sv2"]
radius = 59.0085

[sub_resource type="CircleShape2D" id="CircleShape2D_63wrh"]
radius = 90.0056

[sub_resource type="CircleShape2D" id="CircleShape2D_mglr8"]
radius = 16.0312

[sub_resource type="CircleShape2D" id="CircleShape2D_1tmp0"]
radius = 13.0

[node name="PizzaDrone" type="Node2D" node_paths=PackedStringArray("hitbox")]
z_index = 1
script = ExtResource("1_kdyqq")
BASE_MAX_SPEED = 30.0
BASE_DAMAGE = 2.0
hitbox = NodePath("MultiHitbox")

[node name="Compass" type="Marker2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="."]
z_index = 1
texture_filter = 2
material = ExtResource("2_cx5yg")
texture = ExtResource("3_a5x3b")

[node name="AISearchField" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="AISearchField"]
shape = SubResource("CircleShape2D_22sv2")

[node name="EnemySearchField" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemySearchField"]
shape = SubResource("CircleShape2D_63wrh")

[node name="PizzaPersonalZone" type="Area2D" parent="."]
collision_layer = 64
collision_mask = 64

[node name="CollisionShape2D" type="CollisionShape2D" parent="PizzaPersonalZone"]
shape = SubResource("CircleShape2D_mglr8")

[node name="MultiHitbox" parent="." instance=ExtResource("4_8tmqp")]
collision_mask = 6
damage = 1.0

[node name="CollisionPolygon2D" parent="MultiHitbox" index="0"]
disabled = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="MultiHitbox"]
shape = SubResource("CircleShape2D_1tmp0")

[editable path="MultiHitbox"]
